Add video link for empty workspace demonstration
Added a link to a video demonstrating the empty workspace.

--- a/docs/3.md
+++ b/docs/3.md
@@ -17,3 +17,5 @@
 Сервер запущен
 
 ✅ Сервер разработки доступен по адресу: http://localhost:5173/
+
+[Создан пустой рабочий стол.webm](https://github.com/user-attachments/assets/6f2d2be8-6ca4-4aa9-9168-2cd2b6b1f3f5)
