Добавил видео к step-2

--- a/docs/Создаем_первые_блоки.md
+++ b/docs/Создаем_первые_блоки.md
@@ -1,2 +1,3 @@
 ## "Добавлен код, создающий дополнительную панель интерфейса и два кастомных блока Blockly с поддержкой взаимной стыковки через коннекторы."
 
+[два кастомных блока Blockly.webm](https://github.com/user-attachments/assets/6a5363a8-528b-481f-b0e2-ae80a3488a69)
