Update unique block instances documentation
Added video link and clarified functional requirements for unique block instances.

--- a/docs/Уникальные_экземпляры_блоков.md
+++ b/docs/Уникальные_экземпляры_блоков.md
@@ -1,4 +1,9 @@
+### Что получилось — видео, условия задачи (см. ниже)
+[Уникальные экземпляры блоков.webm](https://github.com/user-attachments/assets/895c4685-2780-4a0a-87b3-6451ce53e4c8)
+
 ### Функциональные требования к блокам "Print"
+
+Тег step-6 — это закладка. Перейдя по ней, можно посмотреть код.
 
 **1. Уникальные экземпляры блоков**
 - Каждый блок должен иметь предопределенный уникальный идентификатор (ID) — например: `block1`, `block2`, `block3`.
