Пишем_компилятор_в_начале

--- a/docs/Структура_проекта.md
+++ b/docs/Структура_проекта.md
@@ -26,6 +26,11 @@
 project-root/
 ├── src/
 │   ├── App.vue                  # Главный компонент (только рендеринг и хуки)
+│   src/
+│   ├── compiler/                # Слой трансформации данных
+│   │   ├── index.ts             # Точка входа (Шлюз)
+│   │   ├── transformer.ts       # [В разработке] Логика маппинга блоков
+│   │   └── types.ts             # Определение типов данных
 │   ├── main.ts                  # Entry point (импорт App, createApp)
 │   ├── assets/                  # Статические файлы (стили, изображения)
 │   ├── blocks/                  # Определения кастомных блоков Blockly
