Добавлено видео и условия задачи в документацию
Добавлено видео с демо-сайтом и ссылка на код.

--- a/docs/Реализован_демо-сайт.md
+++ b/docs/Реализован_демо-сайт.md
@@ -1,3 +1,7 @@
+## Что получилось — видео, условия задачи (см. ниже)
+[Реализован демо-сайт.webm](https://github.com/user-attachments/assets/84bd5198-2fcb-4e1d-9f20-006f8a5fecd5)
+
+Тег step-8 — это закладка. Перейдя по ней, можно посмотреть код.
 # Документация проекта: Модульный конструктор сайтов (Vue 3 + TS)
 
 ## 1. Общее описание
