Update Компилятор_создан.md with video links
Added video links demonstrating compiler functionality and clarified the purpose of step-9 tag.

--- a/docs/Компилятор_создан.md
+++ b/docs/Компилятор_создан.md
@@ -1,6 +1,12 @@
 
+[Компилятор_создан.webm](https://github.com/user-attachments/assets/a2831af2-3950-446c-9247-44d078fca051)
 
-Тег step-9 — это закладка. Перейдя по ней, можно посмотреть код.
+В следующем видео показано: если блоки вставляются неправильно, компилятор их просто выкидывает.
+
+[Компилятор_создан0+2.webm](https://github.com/user-attachments/assets/a2197389-29f6-4c4d-b4a1-41711b267aba)
+
+
+Тег step-9 — этозакладка. Перейдя по ней, можно посмотреть код.
 
 ### 1. Архитектурная схема (Pipeline)
 
